# UCBAstron121

./: NoiseGen1
Lab2/Code/: HI_Obs_8mod.py
Lab2/Code/6/: HICapture_Real_Time.py  HIFreqSwitch.py  HI_Obs_3.py  HI_Obs_5  HI_Obs_6.py  HI_Obs_7.py  HI_Obs_7_Adv.py  HI_Obs_8.py  HI_Obs_8_2.py  function.py  untitled.py
Lab2/Code/8/: DataCheck  HI_Obs_8mod.py
Lab2/Code/9/: CableStuff.py  Cables2.py  (+2 more)
Lab3/Code/: 3_8_1_mod.py  BandpassTest.py  Concat2.py  Data Sync  DataCol1.py  DataCol2.py  DataCol3.py  DataTest  SyncData.py  WaterWatch.py  concat.py
Lab4/Code/: maint_start.py  observe_hi_survey.py  stow_end.py
Lab_1_Lab_Report/: LabReport1.ipynb
Lab_1_Lab_Report/5.3/: Lab1_Trial1.py
Lab_1_Lab_Report/5.6/: FreqRes1000000.0Hz, 16384.npz  FreqRes1000000.0Hz, 4096.npz  FreqRes1000000.0Hz, 8192.npz  FreqRes2000000.0Hz, 16384.npz  FreqRes2000000.0Hz, 2048.npz  FreqRes2000000.0Hz, 4096.npz  FreqRes2000000.0Hz, 8192.npz  FreqRes2500000.0Hz, 4096.npz  FreqRes2500000.0Hz, 8192.npz  FreqRes3000000.0Hz, 16384.npz  FreqRes3000000.0Hz, 2048.npz  FreqRes3000000.0Hz, 4096.npz  FreqRes3000000.0Hz, 8192.npz  FreqRes3200000.0Hz, 4096.npz  FreqRes3200000.0Hz, 8192.npz  Lab1_5.6.py
Lab_1_Lab_Report/5.8/: noise_1000000Hz_16blocks, 32768samples.npz  noise_1000000Hz_2blocks, 32768samples.npz  noise_1000000Hz_4blocks, 32768samples.npz  noise_1000000Hz_8blocks, 32768samples.npz  noisegentrial2.py
Lab_1_Lab_Report/7.1/: mixer7111.py
Lab_1_Lab_Report/7.3/: lab1_7.3.py
Lab_1_Lab_Report/Lab1Tools/: pyproject.toml
Lab_1_Lab_Report/Lab1Tools/src/lab1tools/: __init__.py  functions.py
